Cursor type resets after dragging a link
Categories
(Core :: Widget: Cocoa, defect)
Tracking
()
People
(Reporter: 98zusenko, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
48 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
pascalc
:
approval-mozilla-esr91+
|
Details | Review |
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.15; rv:94.0) Gecko/20100101 Firefox/94.0
Steps to reproduce:
https://jsfiddle.net/ZhenyaUsenko/5gorvm27/4/
Press LMB on a link. Move mouse a bit. Release LMB
Actual results:
Link cursor now is default instead of pointer, until you move mouse out of bounds of a link and then move in bounds again
Expected results:
Link cursor should remain pointer
(I am almost sure I didn't see this in v93)
Updated•3 years ago
|
Comment 1•3 years ago
|
||
I can't reproduce this on Firefox 95 on OSX. It sounds like this is just a visual issue, so I'm going to mark it as S3.
Do you have any custom cursor settings? I know there's been some work related to those recently to fix some issues with the latest version of OSX, but it looks like you are on 10.15.
If somebody who can reproduce it could use mozregression to figure out what might have caused this, that would be good.
Comment 2•3 years ago
|
||
Needinfo for the questions in comment 1. Thanks for the bug report.
Updated•3 years ago
|
Updated•3 years ago
|
Reporter | ||
Comment 4•3 years ago
|
||
(In reply to Andrew McCreight [:mccr8] from comment #1)
I can't reproduce this on Firefox 95 on OSX. It sounds like this is just a visual issue, so I'm going to mark it as S3.
Do you have any custom cursor settings? I know there's been some work related to those recently to fix some issues with the latest version of OSX, but it looks like you are on 10.15.
If somebody who can reproduce it could use mozregression to figure out what might have caused this, that would be good.
No custom cursor settings. All css needed to reproduce was added to jsfiddle. Can you check it on v94?
Reporter | ||
Comment 7•3 years ago
|
||
(In reply to Andrew McCreight [:mccr8] from comment #1)
I can't reproduce this on Firefox 95 on OSX. It sounds like this is just a visual issue, so I'm going to mark it as S3.
Do you have any custom cursor settings? I know there's been some work related to those recently to fix some issues with the latest version of OSX, but it looks like you are on 10.15.
If somebody who can reproduce it could use mozregression to figure out what might have caused this, that would be good.
Just checked on 95.0b2. Same issue
Comment 8•3 years ago
|
||
(In reply to Zhenya Usenko from comment #5)
OS version is 12.0.1
Ah, ok. I'm on 11.6. That's probably the difference.
Comment 9•3 years ago
|
||
Set release status flags based on info from the regressing bug 1736049
Updated•3 years ago
|
Comment 10•3 years ago
|
||
Emilio, what would it take to fix this? Can you assign a priority?
Assignee | ||
Comment 11•3 years ago
|
||
(In reply to Markus Stange [:mstange] from comment #3)
This is probably a regression from bug 1736049, which shipped with 94.
You sure? I see this on Linux as well fwiw.
Assignee | ||
Comment 12•3 years ago
|
||
Oh, I lie. The behavior is somewhat different. On Linux I get the new mouse cursor as soon as I move the cursor, even inside the link.
Assignee | ||
Comment 13•3 years ago
|
||
Mkay, so on Firefox 91 on macOS the behavior is the same as on Linux.
Assignee | ||
Comment 14•3 years ago
|
||
So total guess based on blame and code inspection, but I think removing this line wasn't quite correct after all: https://hg.mozilla.org/integration/autoland/rev/ff6d6594f7b0#l1.34
Because stuff like native drag presumably can change the set cursor? See bug 358095? So we should probably add there something like:
if (MOZ_UNLIKELY(![mCurrentMacCursor isSet])) {
[mCurrentMacCursor set]
}
Or such. I can't test right now because my macOS build will take a bit, but I'll send a patch afterwards if it works.
Assignee | ||
Comment 15•3 years ago
|
||
Updated•3 years ago
|
Assignee | ||
Updated•3 years ago
|
Comment 16•3 years ago
|
||
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/67b45c38e294 Make sure to set mCurrentMacCursor if needed. r=mstange
Comment 17•3 years ago
|
||
bugherder |
Comment 18•3 years ago
|
||
The patch landed in nightly and beta is affected.
:emilio, is this bug important enough to require an uplift?
If not please set status_beta
to wontfix
.
For more information, please visit auto_nag documentation.
Assignee | ||
Comment 19•3 years ago
|
||
Comment on attachment 9250023 [details]
Bug 1739352 - Make sure to set mCurrentMacCursor if needed. r=mstange
Beta/Release Uplift Approval Request
- User impact if declined: comment 0
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: comment 0
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Relatively simple change to cursor handling on macOS.
- String changes made/needed: none
Assignee | ||
Updated•3 years ago
|
Comment 20•3 years ago
|
||
Comment on attachment 9250023 [details]
Bug 1739352 - Make sure to set mCurrentMacCursor if needed. r=mstange
Low risk and we still have several betas this cycle, approved for 95 beta 8, thanks.
Comment 21•3 years ago
|
||
bugherder uplift |
Updated•3 years ago
|
Comment 22•3 years ago
|
||
Reproduced the issue on Firefox 94.0 under macOS 12.0.1 by following the STR from Comment 0.
The issue is fixed on Firefox 96.0a1 (2021-11-15) and 95.0b8 (treeherder build) on the same macOS 12.0.1 system.
Comment 23•3 years ago
|
||
Please nominate this for ESR approval when you get a chance.
Assignee | ||
Comment 24•3 years ago
|
||
Comment on attachment 9250023 [details]
Bug 1739352 - Make sure to set mCurrentMacCursor if needed. r=mstange
ESR Uplift Approval Request
- If this is not a sec:{high,crit} bug, please state case for ESR consideration: comment 0, trivialish fix.
- User impact if declined: comment 0
- Fix Landed on Version: 95
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Really trivial change to macOS cursor handling
- String or UUID changes made by this patch: none
Updated•3 years ago
|
Comment 25•3 years ago
|
||
bugherder uplift |
Comment 26•3 years ago
|
||
Verified the fix as well on Firefox 91.4.0esr (treeherder build) under macOS 11.6.1 and it is behaving as expected.
Description
•