Bug 1739352 - Make sure to set mCurrentMacCursor if needed. r=mstange a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D130769